--- a/connection.ipynb
+++ b/connection.ipynb
@@ -2,7 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting psycopg2\n",
+      "  Downloading psycopg2-2.9.10-cp312-cp312-win_amd64.whl.metadata (5.0 kB)\n",
+      "Downloading psycopg2-2.9.10-cp312-cp312-win_amd64.whl (1.2 MB)\n",
+      "   ---------------------------------------- 0.0/1.2 MB ? eta -:--:--\n",
+      "   --------------------------- ------------ 0.8/1.2 MB 4.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 1.2/1.2 MB 4.1 MB/s eta 0:00:00\n",
+      "Installing collected packages: psycopg2\n",
+      "Successfully installed psycopg2-2.9.10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution ~treamlit (D:\\anaconda3\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~treamlit (D:\\anaconda3\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~treamlit (D:\\anaconda3\\Lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting psycopg[binary]\n",
+      "  Downloading psycopg-3.2.9-py3-none-any.whl.metadata (4.5 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.6 in d:\\anaconda3\\lib\\site-packages (from psycopg[binary]) (4.11.0)\n",
+      "Requirement already satisfied: tzdata in d:\\anaconda3\\lib\\site-packages (from psycopg[binary]) (2023.3)\n",
+      "Collecting psycopg-binary==3.2.9 (from psycopg[binary])\n",
+      "  Downloading psycopg_binary-3.2.9-cp312-cp312-win_amd64.whl.metadata (3.0 kB)\n",
+      "Downloading psycopg_binary-3.2.9-cp312-cp312-win_amd64.whl (2.9 MB)\n",
+      "   ---------------------------------------- 0.0/2.9 MB ? eta -:--:--\n",
+      "   ------- -------------------------------- 0.5/2.9 MB 3.4 MB/s eta 0:00:01\n",
+      "   --------------------- ------------------ 1.6/2.9 MB 4.0 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 2.4/2.9 MB 4.1 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.9/2.9 MB 4.2 MB/s eta 0:00:00\n",
+      "Downloading psycopg-3.2.9-py3-none-any.whl (202 kB)\n",
+      "Installing collected packages: psycopg-binary, psycopg\n",
+      "Successfully installed psycopg-3.2.9 psycopg-binary-3.2.9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution ~treamlit (D:\\anaconda3\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~treamlit (D:\\anaconda3\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~treamlit (D:\\anaconda3\\Lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install psycopg[binary]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,186 +86,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1400"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection successful!\n",
+      "Data uploaded successfully!\n"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_csv('fixed_train_ticket_random_passengers.csv')\n",
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
     "\n",
-    "engine = create_engine(\"mysql+pymysql://root:kaustav007@127.0.0.1:3307/sql_dashboard\")\n",
+    "# Use the Pooler connection details (IPv4 compatible)\n",
+    "USER = \"postgres.yboegmjeqsadtiqkhlek\"\n",
+    "PASSWORD = \"kaustav007\"\n",
+    "HOST = \"aws-0-ap-south-1.pooler.supabase.com\"\n",
+    "PORT = \"6543\"\n",
+    "DBNAME = \"postgres\"\n",
     "\n",
-    "df.to_sql(name='train_tickets', con=engine, index=True, if_exists='replace')"
+    "# Build connection string with sslmode=require\n",
+    "DATABASE_URL = f\"postgresql+psycopg2://{USER}:{PASSWORD}@{HOST}:{PORT}/{DBNAME}?sslmode=require\"\n",
+    "\n",
+    "# Create the SQLAlchemy engine\n",
+    "engine = create_engine(DATABASE_URL)\n",
+    "\n",
+    "# Test the connection\n",
+    "try:\n",
+    "    with engine.connect() as conn:\n",
+    "        print(\"Connection successful!\")\n",
+    "except Exception as e:\n",
+    "    print(\"Failed to connect:\", e)\n",
+    "\n",
+    "# Load CSV\n",
+    "df = pd.read_csv(\"fixed_train_ticket_random_passengers.csv\")\n",
+    "\n",
+    "# Write to the database table\n",
+    "try:\n",
+    "    df.to_sql(\"train_tickets\", con=engine, if_exists=\"replace\", index=False)\n",
+    "    print(\"Data uploaded successfully!\")\n",
+    "except Exception as e:\n",
+    "    print(\"Error during upload:\", e)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ticket_id</th>\n",
-       "      <th>train_id</th>\n",
-       "      <th>travel_date</th>\n",
-       "      <th>passenger_name</th>\n",
-       "      <th>class</th>\n",
-       "      <th>price</th>\n",
-       "      <th>train_name</th>\n",
-       "      <th>source</th>\n",
-       "      <th>destination</th>\n",
-       "      <th>days_of_operation</th>\n",
-       "      <th>total_seats</th>\n",
-       "      <th>booked_seats</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1002</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>2023-01-04</td>\n",
-       "      <td>Sai Das</td>\n",
-       "      <td>AC 2 Tier</td>\n",
-       "      <td>288</td>\n",
-       "      <td>Garib Rath</td>\n",
-       "      <td>Ahmedabad</td>\n",
-       "      <td>Kolkata</td>\n",
-       "      <td>Fri,Mon,Sat,Tue,Wed</td>\n",
-       "      <td>100</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1009</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>2023-01-09</td>\n",
-       "      <td>Vivaan Patel</td>\n",
-       "      <td>AC 2 Tier</td>\n",
-       "      <td>314</td>\n",
-       "      <td>Garib Rath</td>\n",
-       "      <td>Ahmedabad</td>\n",
-       "      <td>Kolkata</td>\n",
-       "      <td>Fri,Mon,Sat,Tue,Wed</td>\n",
-       "      <td>100</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1012</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>2023-01-29</td>\n",
-       "      <td>Vihaan Patel</td>\n",
-       "      <td>AC 2 Tier</td>\n",
-       "      <td>485</td>\n",
-       "      <td>Garib Rath</td>\n",
-       "      <td>Ahmedabad</td>\n",
-       "      <td>Kolkata</td>\n",
-       "      <td>Fri,Mon,Sat,Tue,Wed</td>\n",
-       "      <td>100</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1014</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>2023-01-29</td>\n",
-       "      <td>Reyansh Patel</td>\n",
-       "      <td>AC 2 Tier</td>\n",
-       "      <td>649</td>\n",
-       "      <td>Garib Rath</td>\n",
-       "      <td>Ahmedabad</td>\n",
-       "      <td>Kolkata</td>\n",
-       "      <td>Fri,Mon,Sat,Tue,Wed</td>\n",
-       "      <td>100</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1017</td>\n",
-       "      <td>1004</td>\n",
-       "      <td>2023-01-20</td>\n",
-       "      <td>Aditya Gupta</td>\n",
-       "      <td>AC 2 Tier</td>\n",
-       "      <td>1333</td>\n",
-       "      <td>Garib Rath</td>\n",
-       "      <td>Ahmedabad</td>\n",
-       "      <td>Kolkata</td>\n",
-       "      <td>Fri,Mon,Sat,Tue,Wed</td>\n",
-       "      <td>100</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   ticket_id  train_id travel_date passenger_name      class  price  \\\n",
-       "0       1002      1004  2023-01-04        Sai Das  AC 2 Tier    288   \n",
-       "1       1009      1004  2023-01-09   Vivaan Patel  AC 2 Tier    314   \n",
-       "2       1012      1004  2023-01-29   Vihaan Patel  AC 2 Tier    485   \n",
-       "3       1014      1004  2023-01-29  Reyansh Patel  AC 2 Tier    649   \n",
-       "4       1017      1004  2023-01-20   Aditya Gupta  AC 2 Tier   1333   \n",
-       "\n",
-       "   train_name     source destination    days_of_operation  total_seats  \\\n",
-       "0  Garib Rath  Ahmedabad     Kolkata  Fri,Mon,Sat,Tue,Wed          100   \n",
-       "1  Garib Rath  Ahmedabad     Kolkata  Fri,Mon,Sat,Tue,Wed          100   \n",
-       "2  Garib Rath  Ahmedabad     Kolkata  Fri,Mon,Sat,Tue,Wed          100   \n",
-       "3  Garib Rath  Ahmedabad     Kolkata  Fri,Mon,Sat,Tue,Wed          100   \n",
-       "4  Garib Rath  Ahmedabad     Kolkata  Fri,Mon,Sat,Tue,Wed          100   \n",
-       "\n",
-       "   booked_seats  \n",
-       "0            15  \n",
-       "1            42  \n",
-       "2            25  \n",
-       "3            25  \n",
-       "4            18  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
